--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=mini-blogger-app
+spring.datasource.url=jdbc:mysql://localhost:3306/mini_blogger_db
+spring.datasource.username=root
+spring.datasource.password=Hari
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.hibernate.SQL=DEBUG
